# homework

./: HW1.1.py  HW1.2.py
4.2/: art.txt
4.3/: 4.3.py
HW1/: HW1.3.py  pyproject.toml  Барабулька.txt  мотивация.txt
HW1/artifacts/: 3.txt
HW2/: Dockerfile  image.tex  link.txt  pyproject.toml  reqirments.txt  table.tex  test.py
HW2/pepelatepeh/: __init__.py
HW4/4.1/: 4.1.py  4.1proc.py
HW4/4.2/: 4.2.py
HW4/4.3/: art3.txt  interaction_log.txt
artifacts/: 1.txt  2.txt
