[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pepelatepeh"
version = "0.1.1"
authors = [
  { name="Nikita Savkin" }
]
description = "LaTeX-code-generator for tables and images"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
